1 file modified-fixed:margin % caused flickering,rem smaller than 1 caused rendering problems

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-size: 20px;
 }
 *,
 *:before,
@@ -9,7 +10,7 @@ html {
 #root {
   width: 400px;
   margin: auto;
-  margin-top: 5%;
+  margin-top: 7vh;
   padding: 1.4rem;
   background: #fff;
   border-radius: 8px;
@@ -19,8 +20,8 @@ html {
 form {
   display: flex;
   width: 100%;
-  height: 3.2rem;
-  border: 2px solid #0472f0;
+  height: 3rem;
+  border: 0.1rem solid #0472f0;
   background: #2f7acf;
   border-radius: 0.2rem;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
@@ -37,7 +38,7 @@ input {
 button {
   width: 13%;
   height: 100%;
-  font-size: 2.5rem;
+  font-size: 2.4rem;
   border: none;
   color: #f3f0f0;
   background: transparent;
@@ -76,7 +77,7 @@ li span:hover {
   color: rgb(255, 255, 255);
   box-shadow: 0 0 5px 2px rgb(187, 187, 187);
   border-radius: 0.2rem;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-family: 'Courier New', Courier, monospace;
   word-break: break-word;
   overflow-wrap: break-word;
